--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     <meta name="keywords" content="Pavilion City, Pavilion City Chapel, Pavilion City Chapel International">
     <meta name="description" content="Sermons, books and teaching from Pavilion City Chapel International">
     <title>Pavilion City Chapel International</title>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,600;0,700;1,700&family=Raleway:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">    
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,600;0,700;1,700&family=Raleway:ital,wght@0,400;0,500;0,600;1,400&display=swap" rel="stylesheet">    
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="loader">
+    <!-- <div class="loader">
         <img src="./img/ripple.svg" alt=""loading>
-    </div>
+    </div> -->
     <nav class="navbar navbar-expand-md">
-        <a href="index.html" class="navbar-brand">Pavilion City Chapel <br>International </a>
+        <a href="index.html" class="navbar-brand"><img src="./img/logosm.png" alt=""><span class="logolabel">Pavilion City Chapel <br>International</span></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"><img src="img/toggler.svg" alt=""></span>
           </button>
@@ -30,9 +30,13 @@
                 <li class="nav-item">
                   <a class="nav-link" href="#">Books</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">About the Church</a>
+                  </li>
               </ul>
         </div>
     </nav>
+
     <header class="header">
         <div class="content">
             <p class="main">For God so loved the world, that he gave his only Son, that whoever believes in him should not perish but have eternal life.
@@ -41,7 +45,7 @@
         </div>
         <div class="ctas">
             <a href="#" class="btn primary">View Sermons</a>
-            <a href="#" class="btn secondary">View Weekly Schedule</a>
+            <a href="#weekly" class="btn secondary">View Weekly Schedule</a>
         </div>
     </header>
     <section class="welcome__section">
@@ -56,15 +60,42 @@
                 </figure>
         </div>
     </section>
-    <section class="with-us">
+    <section class="with-us" id="weekly">
         <div class="pictwo"></div>
         <div class="content">
             <h1>Worship with us</h1>
             <div class="info">
-                This is and every Sunday
+                <!-- This is and every Sunday -->
                 <div class="at">
-                    <p><img src="img/locationico.svg" alt=""><span class="label">East Legon</span></p>
-                    <p><img src="img/timeico.svg" alt=""><span class="label">9:00 am</span></p>
+                    <p><img src="img/locationico.svg" alt=""><span class="label">Kojo-Ashong Amasaman</span></p>
+                    <!-- <p><img src="img/timeico.svg" alt=""><span class="label">9:00 am</span></p> -->
+                </div>
+                <div class="schedule">
+                    <div class="day">
+                        <p class="weekday">Sunday</p>
+                        <p class="time"><img src="img/timeico.svg" alt=""><span class="label">8:30 am - 11:30 am</span></p>
+                        <p class="name">Blissful Holy Ghost Service</p>
+                    </div>
+                    <div class="day">
+                        <p class="weekday">Monday</p>
+                        <p class="time"><img src="img/timeico.svg" alt=""><span class="label">6:00 pm - 8:00 pm</span></p>
+                        <p class="name">Men's Fellowship</p>
+                    </div>
+                    <div class="day">
+                        <p class="weekday">Tuesday</p>
+                        <p class="time"><img src="img/timeico.svg" alt=""><span class="label">6:00 pm - 8:00 pm</span></p>
+                        <p class="name">Women's Fellowship</p>
+                    </div>
+                    <div class="day">
+                        <p class="weekday">Wednesday</p>
+                        <p class="time"><img src="img/timeico.svg" alt=""><span class="label">6:00 pm - 8:30 pm</span></p>
+                        <p class="name">Teaching and Prophetic Service</p>
+                    </div>
+                    <div class="day">
+                        <p class="weekday">Thursday</p>
+                        <p class="time"><img src="img/timeico.svg" alt=""><span class="label">6:00 pm - 8:30 pm</span></p>
+                        <p class="name">Youth Fellowship</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -76,6 +107,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="#">Sermons</a></li>
                 <li><a href="#">Books</a></li>
+                <li><a href="#">About the Church</a></li>
             </ul>
         </div>
         <div class="social">
@@ -94,10 +126,13 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     <script>
-        let loader = document.querySelector('.loader');
-        document.addEventListener("DOMContentLoaded", function() {
-            loader.style.display = "none";
-        })
+        // let loader = document.querySelector('.loader');
+        
+        // document.addEventListener("DOMContentLoaded", function() {
+        //     setTimeout(function(){
+        //         loader.style.display = "none";
+        //     }, 0)
+        // })
     </script>
 </body>
 </html>
