--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="Pavilion City, Pavilion City Chapel, Pavilion City Chapel International">
     <meta name="description" content="Sermons, books and teaching from Pavilion City Chapel International">
     <title>Pavilion City Chapel International</title>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,600;0,700;1,700&family=Raleway:ital,wght@0,400;0,500;0,600;1,400&display=swap" rel="stylesheet">    
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,600;0,700;1,700&family=Raleway:ital,wght@0,400;0,500;0,600;0,700;1,400&display=swap" rel="stylesheet">    
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -67,7 +67,7 @@
             <div class="info">
                 <!-- This is and every Sunday -->
                 <div class="at">
-                    <p><img src="img/locationico.svg" alt=""><span class="label">Kojo-Ashong Amasaman</span></p>
+                    <p><img src="img/locationico.svg" alt="">at<span class="label">Kojo-Ashong Amasaman</span></p>
                     <!-- <p><img src="img/timeico.svg" alt=""><span class="label">9:00 am</span></p> -->
                 </div>
                 <div class="schedule">
