--- a/index.html
+++ b/index.html
@@ -31,8 +31,11 @@
                   <a class="nav-link" href="#">Books</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">About the Church</a>
-                  </li>
+                    <a class="nav-link" href="#">About</a>
+                </li>
+                <li class="nav-item sep">
+                    <a class="btn primary" href="#">Get in Touch</a>
+                </li>
               </ul>
         </div>
     </nav>
@@ -107,7 +110,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="#">Sermons</a></li>
                 <li><a href="#">Books</a></li>
-                <li><a href="#">About the Church</a></li>
+                <li><a href="#">About</a></li>
             </ul>
         </div>
         <div class="social">
@@ -118,6 +121,10 @@
                 <li><a href="#"><img src="./img/ig.svg" alt=""></a></li>
                 <li><a href="#"><img src="./img/yt.svg" alt=""></a></li>
             </ul>
+        </div>
+
+        <div class="copyright">
+            &copy; Pavilion City Chapel International, 2020
         </div>
     </footer>
 
