move scroll to to worship with us

--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
                 </figure>
         </div>
     </section>
-    <section class="with-us" id="weekly">
+    <section class="with-us" >
         <div class="pictwo"></div>
         <div class="content">
-            <h1>Worship with us</h1>
+            <h1 id="weekly">Worship with us</h1>
             <div class="info">
                 <!-- This is and every Sunday -->
                 <div class="at">
