fix html validation error: space not allowed

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In scelerisque a risus sed ultrices. Aliquam molestie condimentum nibh, a facilisis eros vestibulum ac. Proin maximus interdum pretium. Proin egestas blandit eros, ut laoreet purus blandit a. Morbi posuere vulputate purus mattis ornare. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Sed erat ante, venenatis a urna eu, accumsan maximus augue. Quisque cursus metus sed felis congue, vel placerat nibh volutpat.</p>
                 </div>
                 <figure class="content--pic">
-                    <img src="img/lifted hands.png" alt="lifted hands">
+                    <img src="img/lifted_hands.png" alt="lifted hands">
                 </figure>
         </div>
     </section>
