started tablet and desktop views

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <img src="./img/ripple.svg" alt=""loading>
     </div> -->
     <nav class="navbar navbar-expand-md">
-        <a href="index.html" class="navbar-brand"><img src="./img/logosm.png" alt=""><span class="logolabel">Pavilion City Chapel <br>International</span></a>
+        <a href="index.html" class="navbar-brand"><img src="./img/logosml.svg" alt=""><span class="logolabel">Pavilion City Chapel <br>International</span></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"><img src="img/toggler.svg" alt=""></span>
           </button>
@@ -41,26 +41,28 @@
     </nav>
 
     <header class="header">
-        <div class="content">
-            <p class="main">For God so loved the world, that he gave his only Son, that whoever believes in him should not perish but have eternal life.
-            </p>
-            <p class="aside">John 3:16</p>
-        </div>
-        <div class="ctas">
-            <a href="#" class="btn primary">View Sermons</a>
-            <a href="#weekly" class="btn secondary">View Weekly Schedule</a>
+        <div class="limit">
+            <div class="content">
+                <p class="main">For God so loved the world, that he gave his only Son, that whoever believes in him should not perish but have eternal life.
+                </p>
+                <p class="aside">John 3:16</p>
+            </div>
+            <div class="ctas">
+                <a href="#" class="btn primary">View Sermons</a>
+                <a href="#weekly" class="btn secondary">View Weekly Schedule</a>
+            </div>
         </div>
     </header>
     <section class="welcome__section">
         <div class="welcome__section-container">
             <h1>Welcome to Pavilion City Chapel
                 International</h1>
-                <div class="content--text">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In scelerisque a risus sed ultrices. Aliquam molestie condimentum nibh, a facilisis eros vestibulum ac. Proin maximus interdum pretium. Proin egestas blandit eros, ut laoreet purus blandit a. Morbi posuere vulputate purus mattis ornare. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Sed erat ante, venenatis a urna eu, accumsan maximus augue. Quisque cursus metus sed felis congue, vel placerat nibh volutpat.</p>
-                </div>
-                <figure class="content--pic">
-                    <img src="img/lifted_hands.png" alt="lifted hands">
-                </figure>
+            <div class="content--text">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In scelerisque a risus sed ultrices. Aliquam molestie condimentum nibh, a facilisis eros vestibulum ac. Proin maximus interdum pretium. Proin egestas blandit eros, ut laoreet purus blandit a. Morbi posuere vulputate purus mattis ornare. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Sed erat ante, venenatis a urna eu, accumsan maximus augue. Quisque cursus metus sed felis congue, vel placerat nibh volutpat.</p>
+            </div>
+            <figure class="content--pic">
+                <img src="img/lifted_hands.png" alt="lifted hands">
+            </figure>
         </div>
     </section>
     <section class="with-us" >
