correct logo pic src

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <img src="./img/ripple.svg" alt=""loading>
     </div> -->
     <nav class="navbar navbar-expand-md">
-        <a href="index.html" class="navbar-brand"><img src="./img/logosml.svg" alt=""><span class="logolabel">Pavilion City Chapel <br>International</span></a>
+        <a href="index.html" class="navbar-brand"><img src="./img/logosm.png" alt=""><span class="logolabel">Pavilion City Chapel <br>International</span></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"><img src="img/toggler.svg" alt=""></span>
           </button>
