removed second H1 element

--- a/index.html
+++ b/index.html
@@ -65,44 +65,44 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In scelerisque a risus sed ultrices. Aliquam molestie condimentum nibh, a facilisis eros vestibulum ac. Proin maximus interdum pretium. Proin egestas blandit eros, ut laoreet purus blandit a. Morbi posuere vulputate purus mattis ornare. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Sed erat ante, venenatis a urna eu, accumsan maximus augue. Quisque cursus metus sed felis congue, vel placerat nibh volutpat.</p>
             </div>
             <figure class="content--pic">
-                <img src="img/rev1.jpg" alt="lifted hands">
+                <img src="img/rev1.jpg" alt="minister">
             </figure>
         </div>
     </section>
     <section class="with-us" >
         <div class="pictwo"></div>
         <div class="content">
-            <h1 id="weekly">Worship with us</h1>
+            <h2 id="weekly">Worship with us</h2>
             <div class="info">
                 <!-- This is and every Sunday -->
                 <div class="at">
-                    <p><img src="img/locationico.svg" alt="">at<span class="label">Kojo-Ashong Amasaman</span></p>
-                    <!-- <p><img src="img/timeico.svg" alt=""><span class="label">9:00 am</span></p> -->
+                    <p><img src="img/locationico.svg" alt="location">at<span class="label">Kojo-Ashong Amasaman</span></p>
+                    <!-- <p><img src="img/timeico.svg" alt="time"><span class="label">9:00 am</span></p> -->
                 </div>
                 <div class="schedule">
                     <div class="day">
                         <p class="weekday">Sunday</p>
-                        <p class="time"><img src="img/timeico.svg" alt=""><span class="label">8:30 am - 11:30 am</span></p>
+                        <p class="time"><img src="img/timeico.svg" alt="time"><span class="label">8:30 am - 11:30 am</span></p>
                         <p class="name">Blissful Holy Ghost Service</p>
                     </div>
                     <div class="day">
                         <p class="weekday">Monday</p>
-                        <p class="time"><img src="img/timeico.svg" alt=""><span class="label">6:00 pm - 8:00 pm</span></p>
+                        <p class="time"><img src="img/timeico.svg" alt="time"><span class="label">6:00 pm - 8:00 pm</span></p>
                         <p class="name">Men's Fellowship</p>
                     </div>
                     <div class="day">
                         <p class="weekday">Tuesday</p>
-                        <p class="time"><img src="img/timeico.svg" alt=""><span class="label">6:00 pm - 8:00 pm</span></p>
+                        <p class="time"><img src="img/timeico.svg" alt="time"><span class="label">6:00 pm - 8:00 pm</span></p>
                         <p class="name">Women's Fellowship</p>
                     </div>
                     <div class="day">
                         <p class="weekday">Wednesday</p>
-                        <p class="time"><img src="img/timeico.svg" alt=""><span class="label">6:00 pm - 8:30 pm</span></p>
+                        <p class="time"><img src="img/timeico.svg" alt="time"><span class="label">6:00 pm - 8:30 pm</span></p>
                         <p class="name">Teaching and Prophetic Service</p>
                     </div>
                     <div class="day">
                         <p class="weekday">Thursday</p>
-                        <p class="time"><img src="img/timeico.svg" alt=""><span class="label">6:00 pm - 8:30 pm</span></p>
+                        <p class="time"><img src="img/timeico.svg" alt="time"><span class="label">6:00 pm - 8:30 pm</span></p>
                         <p class="name">Youth Fellowship</p>
                     </div>
                 </div>
@@ -122,10 +122,10 @@
         <div class="social">
             <h2>Follow Us</h2>
             <ul>
-                <li><a href="index.html"><img src="./img/fb.svg" alt=""></a></li>
-                <li><a href="#"><img src="./img/tw.svg" alt=""></a></li>
-                <li><a href="#"><img src="./img/ig.svg" alt=""></a></li>
-                <li><a href="#"><img src="./img/yt.svg" alt=""></a></li>
+                <li><a href="index.html"><img src="./img/fb.svg" alt="facebook"></a></li>
+                <li><a href="#"><img src="./img/tw.svg" alt="twitter"></a></li>
+                <li><a href="#"><img src="./img/ig.svg" alt="instagram"></a></li>
+                <li><a href="#"><img src="./img/yt.svg" alt="youtube"></a></li>
             </ul>
         </div>
 
