--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="Pavilion City, Pavilion City Chapel, Pavilion City Chapel International">
     <meta name="description" content="Sermons, books and teaching from Pavilion City Chapel International">
     <title>Pavilion City Chapel International</title>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,600;0,700;1,700&family=Raleway:ital,wght@0,400;0,500;0,600;0,700;1,400&display=swap" rel="stylesheet">    
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,600;0,700;0,900&family=Raleway:ital,wght@0,400;0,500;0,600;0,700;1,400&display=swap" rel="stylesheet">    
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <link rel="apple-touch-icon" sizes="180x180" href="img/favicon_io/apple-touch-icon.png">
@@ -28,9 +28,9 @@
                 <li class="nav-item active">
                   <a class="nav-link" href="index.html">Home</a>
                 </li>
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                   <a class="nav-link" href="#">Sermons</a>
-                </li>
+                </li> -->
                 <li class="nav-item">
                   <a class="nav-link" href="#">Books</a>
                 </li>
@@ -47,22 +47,24 @@
     <header class="header">
         <div class="limit">
             <div class="content">
-                <p class="main">For God so loved the world, that he gave his only Son, that whoever believes in him should not perish but have eternal life.
-                </p>
-                <p class="aside">John 3:16</p>
+                <h1 class="main">Promoting the true Gospel of Christ
+                </h1>
+                <p class="aside">Making Christ Jesus more attractive than he has ever been.</p>
             </div>
             <div class="ctas">
-                <a href="#" class="btn primary">View Sermons</a>
-                <a href="#weekly" class="btn secondary">View Weekly Schedule</a>
+                <a href="#weekly" class="btn primary">Worship with Us</a>
+                <!-- <a href="#" class="btn primary">View Sermons</a> -->
+                <a href="#" class="btn secondary">Checkout Books</a>
             </div>
         </div>
     </header>
     <section class="welcome__section">
         <div class="welcome__section-container">
-            <h1>Welcome to Pavilion City Chapel
-                International</h1>
+            <h2>Welcome to Pavilion City Chapel
+                International</h2>
             <div class="content--text">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In scelerisque a risus sed ultrices. Aliquam molestie condimentum nibh, a facilisis eros vestibulum ac. Proin maximus interdum pretium. Proin egestas blandit eros, ut laoreet purus blandit a. Morbi posuere vulputate purus mattis ornare. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Sed erat ante, venenatis a urna eu, accumsan maximus augue. Quisque cursus metus sed felis congue, vel placerat nibh volutpat.</p>
+                <p>We seek to teach to produce <span class="attention">responsible, accountable, respectful, effective, efficient, and godly</span> citizens. <br> <br>
+                    We are believing God to help to produce honesty, intergrity and open minded, and Christ centered individuals.</p>
             </div>
             <figure class="content--pic">
                 <img src="img/rev1.jpg" alt="minister">
@@ -114,7 +116,7 @@
             <h2>Quick Links</h2>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#">Sermons</a></li>
+                <!-- <li><a href="#">Sermons</a></li> -->
                 <li><a href="#">Books</a></li>
                 <li><a href="#">About</a></li>
             </ul>
