--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                   <a class="nav-link" href="#">Books</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
+                    <a class="nav-link" href="#about">About</a>
                 </li>
                 <li class="nav-item sep">
                     <a class="btn primary" href="#">Get in Touch</a>
@@ -71,6 +71,31 @@
             </figure>
         </div>
     </section>
+
+    <section class="about" id="about">
+        <h2>About the Church</h2>
+        <div class="wrapper">
+            <div class="vision about__card">
+                <figure class="about__card--pic">
+                    <img src="img/lighthouse.svg" alt="vision">
+                </figure>
+                <div class="about__card--text">
+                    <h3>Vision Statement</h3>
+                    <p>Pavilion City Chapel International, is part of the global church which is focus on promoting the true gospel of Christ, and to make Christ Jesus more atractive than He has ever been.</p>
+                </div>
+            </div>
+            <div class="mission about__card">
+                <figure class="about__card--pic">
+                    <img src="img/mountain.svg" alt="mission">
+                </figure>
+                <div class="about__card--text">
+                    <h3>Mission Statement</h3>
+                    <p>Pavilion City Chapel International, is dedicated to bringing up effective, efficient, and respectful Christ centered Christians, especially obedient youth.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <section class="with-us" >
         <div class="pictwo"></div>
         <div class="content">
@@ -118,21 +143,24 @@
                 <li><a href="index.html">Home</a></li>
                 <!-- <li><a href="#">Sermons</a></li> -->
                 <li><a href="#">Books</a></li>
-                <li><a href="#">About</a></li>
-            </ul>
-        </div>
-        <div class="social">
-            <h2>Follow Us</h2>
-            <ul>
-                <li><a href="index.html"><img src="./img/fb.svg" alt="facebook"></a></li>
-                <li><a href="#"><img src="./img/tw.svg" alt="twitter"></a></li>
-                <li><a href="#"><img src="./img/ig.svg" alt="instagram"></a></li>
-                <li><a href="#"><img src="./img/yt.svg" alt="youtube"></a></li>
+                <li><a href="#about">About</a></li>
             </ul>
         </div>
 
-        <div class="copyright">
-            &copy; Pavilion City Chapel International, 2020
+        <div class="group">
+            <div class="social">
+                <h2>Follow Us</h2>
+                <ul>
+                    <li><a href="#"><img src="./img/fb.svg" alt="facebook"></a></li>
+                    <li><a href="#"><img src="./img/tw.svg" alt="twitter"></a></li>
+                    <li><a href="#"><img src="./img/ig.svg" alt="instagram"></a></li>
+                    <li><a href="#"><img src="./img/yt.svg" alt="youtube"></a></li>
+                </ul>
+            </div>
+    
+            <div class="copyright">
+                &copy; Pavilion City Chapel International, 2020
+            </div>
         </div>
     </footer>
 
