changed worship with us btn

--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
             <div class="content">
                 <h1 class="main">Promoting the true Gospel of Christ
                 </h1>
-                <p class="aside">Making Christ Jesus more attractive than he has ever been.</p>
+                <p class="aside">Bringing up effective, efficient, and respectful Christ centered Christians.</p>
             </div>
             <div class="ctas">
-                <a href="#weekly" class="btn primary">Worship with Us</a>
+                <a href="#weekly" class="btn primary">View Weekly Schedule</a>
                 <!-- <a href="#" class="btn primary">View Sermons</a> -->
                 <a href="#" class="btn secondary">Checkout Books</a>
             </div>
