added generic social links

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         <img src="./img/ripple.svg" alt=""loading>
     </div> -->
     <nav class="navbar navbar-expand-md">
-        <a href="index.html" class="navbar-brand"><img src="./img/logosml.png" alt=""><span class="logolabel">Pavilion City Chapel <br>International</span></a>
+        <a href="index.html" class="navbar-brand"><img src="./img/logosml.png" alt="logo"><span class="logolabel">Pavilion City Chapel <br>International</span></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"><img src="img/toggler.svg" alt=""></span>
+            <span class="navbar-toggler-icon"><img src="img/toggler.svg" alt="toggler"></span>
           </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav">
@@ -151,10 +151,10 @@
             <div class="social">
                 <h2>Follow Us</h2>
                 <ul>
-                    <li><a href="#"><img src="./img/fb.svg" alt="facebook"></a></li>
-                    <li><a href="#"><img src="./img/tw.svg" alt="twitter"></a></li>
-                    <li><a href="#"><img src="./img/ig.svg" alt="instagram"></a></li>
-                    <li><a href="#"><img src="./img/yt.svg" alt="youtube"></a></li>
+                    <li><a href="https://web.facebook.com/"><img src="./img/fb.svg" alt="facebook"></a></li>
+                    <li><a href="https://twitter.com/"><img src="./img/tw.svg" alt="twitter"></a></li>
+                    <li><a href="https://www.instagram.com/"><img src="./img/ig.svg" alt="instagram"></a></li>
+                    <li><a href="https://www.youtube.com/"><img src="./img/yt.svg" alt="youtube"></a></li>
                 </ul>
             </div>
     
