changed description meta tags

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="Pavilion City, Pavilion City Chapel, Pavilion City Chapel International">
-    <meta name="description" content="Sermons, books and teaching from Pavilion City Chapel International">
+    <meta name="keywords" content="Pavilion City, Pavilion City Chapel, Pavilion City Chapel International, Pavilion">
+    <meta name="description" content="Pavilion City Chapel International is dedicated to bringing up effective, efficient, and respectful Christ centered Christians. Located at Kojo-Ashong Amasaman">
     <title>Pavilion City Chapel International</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,700;0,900&family=Raleway:ital,wght@0,400;0,500;0,700;1,400&display=swap" rel="stylesheet">    
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
