remove get in touch

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#about">About</a>
                 </li>
-                <li class="nav-item sep">
+                <!-- <li class="nav-item sep">
                     <a class="btn primary" href="#">Get in Touch</a>
-                </li>
+                </li> -->
               </ul>
         </div>
     </nav>
