added books page

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                   <a class="nav-link" href="#">Sermons</a>
                 </li> -->
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Books</a>
+                  <a class="nav-link" href="books.html">Books</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#about">About</a>
@@ -142,7 +142,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <!-- <li><a href="#">Sermons</a></li> -->
-                <li><a href="#">Books</a></li>
+                <li><a href="books.html">Books</a></li>
                 <li><a href="#about">About</a></li>
             </ul>
         </div>
