--- a/books.html
+++ b/books.html
@@ -35,7 +35,7 @@
                   <a class="nav-link" href="books.html">Books</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#about">About</a>
+                    <a class="nav-link" href="index.html#about">About</a>
                 </li>
                 <!-- <li class="nav-item sep">
                     <a class="btn primary" href="#">Get in Touch</a>
