added books link to cta button

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class="ctas">
                 <a href="#weekly" class="btn primary">View Weekly Schedule</a>
                 <!-- <a href="#" class="btn primary">View Sermons</a> -->
-                <a href="#" class="btn secondary">Checkout Books</a>
+                <a href="books.html" class="btn secondary">Checkout Books</a>
             </div>
         </div>
     </header>
